# secret-handshake-cpp

./: .gitmodules  CMakeLists.txt  CheatSheet.md  LICENSE  README.md  SecretConnection.cc  SecretConnection.hh  SecretHandshake.cc  SecretHandshake.hh  SecretHandshakeTests.cc  SecretRPC.cc  SecretRPC.hh  SecretStream.cc  SecretStream.hh  build_and_test.sh  shs.cc  shs.hh  shsTests.cc
.github/workflows/: build-test.yml
capnproto/: README.md  SecretConnection.cc  SecretConnection.hh  SecretRPC.cc  SecretRPC.hh
crouton/: README.md  SecretHandshakeStream.cc  SecretHandshakeStream.hh
include/: SecretHandshake.h  SecretHandshake.hh  SecretHandshakeTypes.hh  SecretStream.h  SecretStream.hh  shs.hh
src/: SecretHandshake.cc  SecretHandshake_Internal.hh  SecretStream.cc  shs.cc
tests/: SecretHandshakeTests.c  SecretHandshakeTests.cc  SecretRPCTests.cc  hexString.hh  shsCroutonTests.cc  shsTests.cc
